src/App.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');

body #fonts{
	font-family: 'Montserrat' !important;
}

.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100vw;
  height: 100vh;
  background: linear-gradient(to bottom, rgba(15, 0, 218, 0.068), rgba(0, 95, 158, 0.055));
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#header {
  width: 100%;
  height: 60px;
  margin-bottom: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: whitesmoke;
  background: linear-gradient(to bottom, rgb(84, 0, 218), rgb(113, 0, 158));
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.253);
}

#search {
  max-width: 500px;
  width: 100%;
  margin: 5px;
  padding: 0 10px;
}

h3 {
  margin: 0!important;
}

#employee-list {
  width: 80vw;
  height: calc(90vh - 150px);
  max-width: 1000px;
  margin: 5px 0 40px;
  border: 3px solid rgb(113, 0, 158);
  border-radius: 10px;
  overflow: auto;
  background: white
}

#list-item {
  border-bottom: 1px solid grey;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center
}

h5 {
  margin: 4px!important
}

#logo {
  cursor: pointer;
  justify-content: flex-end;
  margin: 8px;
}

.bi {
  margin: 0 .2px -1px .75px;
}

